--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,18 @@
 services:
     transfersh:
         image: dutchcoders/transfer.sh:v1.6.1
-        command: ["--listener=8080", "--provider=local", "--basedir=/tmp", "--purge-days=20", "--purge-interval=5"]
-        environment:
-            - HTTP_AUTH_USER=${HTTP_AUTH_USER:-username}
-            - HTTP_AUTH_PASS=${HTTP_AUTH_PASS:-secretpassword}
+        command: ["--http-auth-user=username", "--http-auth-pass=secretpassword", "--listener=0.0.0.0:8080", "--provider=local", "--basedir=/storage", "--purge-days=20", "--purge-interval=5"]
+        volumes:
+            - ${PWD}/storage:/storage
+# Uncomment this if you want to test/debug transfersh directly
+#        ports:
+#            - "8080:8080"
 
     proxy:
         image: caddy:2
         ports:
             - "80:80"
-            # - "443:443"
+            - "443:443"
         volumes:
           - ${PWD}/caddy/conf:/etc/caddy
           - ${PWD}/caddy/data:/data
